--- a/Visuals/static/css/style.css
+++ b/Visuals/static/css/style.css
@@ -55,9 +55,15 @@
 
     /* Navbar */
     --navbar-background: #D96363;
+    --nav-stroke: rgb(253, 149, 149);
     --nav-text: #FFFFFF;
+    --nav-text-hover: #b8b8b8;
     --nav-buttons: rgba(255, 255, 255, 0.24);
     --nav-border: #ACACAC;
+    --nav-login-button: #d86565;
+    --nav-login-button-text: #eeeeee;
+    --nav-login-button-hover: #c25a5a;
+    --nav-login-button-stroke: rgb(219, 219, 219);
 
     /* Blockquote */
     --blockquote-under-orange: #e4fd00;
@@ -70,6 +76,7 @@
     --cupcake-green: green;
     --cupcake-black: black;
     --cupcake-white: white;
+    --cupcake-grey: rgb(95, 95, 95);
 
     /* :hover */
     --hover-exit: var(--cupcake-orange);
@@ -92,6 +99,15 @@
 
 html, body {
     background: var(--background) !important;
+    overflow-x: hidden !important;
+    overflow-y: scroll; /* Makes sure users can still Scroll */
+    scrollbar-width: none;
+    -ms-overflow-style: none; /* Old Browsers. Just for safety. */
+}
+
+html::-webkit-scrollbar, 
+body::-webkit-scrollbar { /* All other browsers */
+    display: none;
 }
 
 /* ___________________________________________ */
@@ -101,7 +117,8 @@ html, body {
 /* ___________________________________________ */
 
 .hero {
-    background: url(../images/backgrounds/3-cup-cakes-i-luften.svg);
+    position: relative;       
+    height: 900px;            
 }
 
 /* ___________________________________________ */
@@ -121,6 +138,7 @@ html, body {
 /* ___________________________________________ */
 
 .navbar {
+    border: 2px solid var(--nav-stroke);
     background-color: var(--navbar-background);
     display: flex; /* Important for content placement */
     align-items: center;
@@ -130,9 +148,20 @@ html, body {
     margin: 0.5rem auto 0 auto; /* Top Bottom Right Left */
 }
 
+.navbar li {
+    position: relative;
+}
+
+.navbar ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 .navbar a {
     color: var(--nav-text);    
     text-decoration: none;    
+    text-shadow: 0px 3px 2px rgba(0,0,0,0.4);
 }
 
 .navbar a:hover {
@@ -162,7 +191,7 @@ html, body {
 }
 
 .navbar-menu li a:hover {
-    color: var(--cupcake-orange);
+    color: var(--nav-text-hover);
 }
 
 .navbar-sticky {
@@ -175,6 +204,56 @@ html, body {
     box-shadow: 0 4px 8px rgba(0,0,0,0.30);
 }
 
+.navbar-logo img {
+    width: 20rem;       
+    height: auto;    
+    display: block;  
+}
+
+.navbar-login-button {
+    border-radius: 15px;
+    border: 2px solid var(--nav-login-button-stroke);
+    background-color: var(--nav-login-button);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.30); /* x, y, blur, color*/
+    font-size: 1.0rem;
+    font-weight: 900;
+    color: var(--nav-login-button-text);
+    padding: 0.7rem;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.navbar-login-button:hover {
+    background-color: var(--nav-login-button-hover);
+}
+
+.dropdown-menu {
+    text-align: center; /* Important DO NOT REMOVE */
+    display: none; 
+    position: absolute;
+    top: 100%; 
+    left: -19%;
+    border-radius: 10px;
+    background-color: rgba(150, 89, 89, 0.8);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    min-width: 150px;
+    z-index: 10;
+    transition: all 0.3s ease-in-out;
+}
+
+.dropdown-menu:hover {
+
+}
+
+.dropdown-menu li a {
+    padding: 0.5rem 1rem;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+    opacity: 1;
+    pointer-events: auto;
+}
+
 /* ___________________________________________ */
 
                 /* Section 2 */
@@ -183,6 +262,24 @@ html, body {
 
 .section-2 {
     background-color: var(--section-2-background);
+}
+
+/* ___________________________________________ */
+
+                 /* Waves */
+
+/* ___________________________________________ */
+
+.wave-1 {
+    position: absolute;       
+    bottom: 0;                
+    left: 0;
+    width: 100%;             
+}
+
+.wave-1 img {
+    width: 100%;
+    display: block;           
 }
 
 /* ___________________________________________ */
