--- a/Visuals/templates/404.html
+++ b/Visuals/templates/404.html
@@ -29,12 +29,22 @@
     <script type="module" src="../static/js/components/navbar.js" defer></script>
 
 </head>
-<body>
+<body class="visuals-404">
 
     <!-- Navbar -->
     <div id="navbar-component"></div>
     <!-- Navbar -->
 
+    <!-- 404 Start -->
+    <section class="section-404">
+        <h1 class="section-404-title">404</h1>
+        <h2 class="section-404-text">Ups! Siden findes ikke.</h2>
+        <p class="section-404-p">
+            Det ser ud til, at du er faret vild i vores cupcake-univers.<br>
+            Men frygt ej &ndash; vi har stadig masser af søde overraskelser til dig!
+        </p>
+    </section>
+    <!-- 404 End -->
 
 </body>
 </html>
