--- a/Visuals/templates/index.html
+++ b/Visuals/templates/index.html
@@ -19,11 +19,13 @@
     <!-- CSS Load -->
     <link rel="stylesheet" href="../static/css/style.css">
 
-    <!-- Scripts can also be loaded here with defer -->
     <!-- Framwork load -->
     <link rel="stylesheet" href="../static/css/guacamoleboy-wow.css">
     <link rel="stylesheet" href="../static/css/guacamoleboy-framework.css">
-    <script src="../static/js/guacamoleboy-wow.js" defer></script>
+    <script src="../static/js/guacamoleboy-wow.js"></script>
+
+    <!-- Script Load -->
+    <script src="../static/js/button-to-top.js"></script>
 
     <!-- Modules -->
     <script type="module" src="../static/js/components/navbar.js" defer></script>
@@ -39,6 +41,10 @@
 
 </head>
 <body>
+
+    <!-- Scroll-to-Top Button Start -->
+    <button id="scrollToTopBtn" class="scroll-btn" onclick="scrollToSection()"><i class="fa fa-arrow-up"></i></button>
+    <!-- Scroll-to-Top Button End -->
 
     <!-- Navbar -->
     <div id="navbar-component"></div>
