--- a/Cupcake/src/main/resources/templates/index.html
+++ b/Cupcake/src/main/resources/templates/index.html
@@ -39,5 +39,9 @@
     <!-- Test af Thymeleaf bro.. -->
     <h1 th:text="${message}">Placeholder message</h1>
 
+    <button>
+        pik
+    </button>
+
 </body>
 </html>
