--- a/Visuals/templates/jobs.html
+++ b/Visuals/templates/jobs.html
@@ -29,12 +29,46 @@
     <script type="module" src="../static/js/components/navbar.js" defer></script>
 
 </head>
-<body>
+<body class="subpage">
 
     <!-- Navbar -->
     <div id="navbar-component"></div>
     <!-- Navbar -->
 
+    <!-- Hero Section Start -->
+    <section class="hero">
+
+        <div class="guac-container">
+            <div class="guac-row">
+                
+                <div class="guac-col-auto subpage-cupcake-1">
+                    <img src="../static/images/page-content/index/cupcake-3.png" alt="Billede 1">
+                </div>
+                <div class="guac-col-auto subpage-cupcake-2">
+                    <img src="../static/images/page-content/index/cupcake-3.png" alt="Billede 2">
+                </div>
+
+            </div>
+        </div>
+
+        <!-- End Wave Hero Start -->
+        <div class="wave-1">
+            <img src="../static/images/waves/wave-top.svg">
+        </div>
+        <!-- End Wave Hero End -->
+
+    </section>
+    <!-- Hero Section End -->
+
+    <!-- Next Section Start -->
+    <section class="section-1">
+        <div class="guac-container">
+            <div class="guac-row">
+
+            </div>
+        </div>
+    </section>
+    <!-- Next Section End -->
 
 </body>
 </html>
