--- a/Visuals/templates/tak.html
+++ b/Visuals/templates/tak.html
@@ -29,8 +29,21 @@
     <script type="module" src="../static/js/components/navbar.js" defer></script>
 
 </head>
-<body>
+<body class="subpage visuals-tak">
 
+    <!-- Navbar -->
+    <div id="navbar-component"></div>
+    <!-- Navbar -->
+
+    <!-- Tak Start -->
+    <section class="section-tak">
+        <h1 class="section-tak-title">Tak for din besked</h1>
+        <h2 class="section-tak-text">Vi svarer så hurtigt vi kan..</h2>
+        <p class="section-tak-p">
+            Indtil da kan du besøge vores mange andre sider. Benyt navbaren herover!
+        </p>
+    </section>
+    <!-- Tak End -->
 
 </body>
 </html>
