--- a/Visuals/static/css/style.css
+++ b/Visuals/static/css/style.css
@@ -64,6 +64,7 @@
     --nav-login-button-text: #eeeeee;
     --nav-login-button-hover: #c25a5a;
     --nav-login-button-stroke: rgb(219, 219, 219);
+    --navbar-li-background: rgba(255, 255, 255, 0.3); 
 
     /* Blockquote */
     --blockquote-under-orange: #e4fd00;
@@ -76,6 +77,7 @@
     --cupcake-green: green;
     --cupcake-black: black;
     --cupcake-white: white;
+    --cupcake-less-white: rgb(182, 182, 182);
     --cupcake-grey: rgb(95, 95, 95);
 
     /* :hover */
@@ -98,6 +100,17 @@
     --login-button-stroke: #9c7373;
     --login-button-hover: #946161;
 
+    /* Contact Form */
+    --contact-background: #df9898;
+    --contact-tile: #f5eef3;
+    --contact-tile-border: #d4bcbc;
+    --contact-input-background: #ecd3e1;
+    --contact-input-placeholder: #6f5a66;
+    --contact-input-stroke: #b47e7e;
+    --contact-button-background: #ecd3e1;
+    --contact-button-text: #5b3a3f;
+    --contact-button-border: #9F6868;
+    
     /* Exit Button */
     --exit-button-background: #723a3a;
     --exit-button-background-hover: #c9afaf;
@@ -137,6 +150,11 @@ body::-webkit-scrollbar { /* All other browsers */
     height: 55rem;            
 }
 
+.subpage .hero {
+    position: relative;       
+    height: 45rem !important;          
+}
+
 .index-cupcake-1,
 .index-cupcake-2,
 .index-cupcake-3 {
@@ -161,6 +179,23 @@ body::-webkit-scrollbar { /* All other browsers */
     transform: translateY(20%) rotate(20deg);
 }
 
+.index-cupcake-1,
+.index-cupcake-2 {
+    position: relative;
+}
+
+.subpage-cupcake-1 img {
+    width: 30%;
+    height: auto;
+    transform: translateY(250%) rotate(20deg);
+}
+
+.subpage-cupcake-2 img {
+    width: 50%;
+    height: auto;
+    transform: translateY(70%) rotate(-30deg);
+}
+
 /* ___________________________________________ */
 
                 /* Section 1 */
@@ -170,6 +205,12 @@ body::-webkit-scrollbar { /* All other browsers */
 .section-1 {
     position: relative;
     background-color: var(--section-1-background);
+}
+
+.subpage .section-1 {
+    position: relative;
+    background-color: var(--section-1-background);
+    height: 50rem; /* Temp Until Content is Added */
 }
 
 .section-1-intro {
@@ -269,7 +310,7 @@ body::-webkit-scrollbar { /* All other browsers */
 .navbar a {
     color: var(--nav-text);    
     text-decoration: none;    
-    text-shadow: 0px 3px 2px rgba(0,0,0,0.4);
+    text-shadow: 0px 2px 1px rgba(0,0,0,0.4);
 }
 
 .navbar a:hover {
@@ -373,12 +414,30 @@ body::-webkit-scrollbar { /* All other browsers */
     background-color: var(--section-2-background);
 }
 
+.section-2-man {
+    position: relative;
+    height: 2rem;
+}
+
+.man-wrapper {
+    position: relative;
+    z-index: 1;
+}
+
+.section-2-man img {
+    width: 50%;
+    height: auto;
+    z-index: 1 !important;
+    transform: translateY(-50%);
+}
+
 .section-2-intro {
     text-align: center;
     max-width: 55ch;
     position: relative;
     margin: 0 auto;
     color: var(--cupcake-white);
+    z-index: 5; /* Infront of the Text */
 }
 
 .section-2-intro h2::after {
@@ -421,6 +480,11 @@ body::-webkit-scrollbar { /* All other browsers */
 .wave-3 img {
     width: 100%;
     display: block;           
+}
+
+.wave-3 {
+     position: relative;
+     z-index: 500;
 }
 
 /* ___________________________________________ */
@@ -534,6 +598,70 @@ body::-webkit-scrollbar { /* All other browsers */
 
 .section-404-p {
     font-size: 1.2rem;
+    max-width: 55ch;     
+    line-height: 1.6;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+}
+/* ___________________________________________ */
+
+                  /* Contact / Kontakt */
+
+/* ___________________________________________ */
+
+.contact-wrapper{ 
+    
+}
+
+
+
+/* ___________________________________________ */
+
+                  /* Tak */
+
+/* ___________________________________________ */
+
+.visuals-tak {
+    height: 100vh; /* Very important DO NOT REMOVE */ 
+    overflow: hidden !important;  
+}
+
+.section-tak {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
+    color: #7e5656;
+    padding: 2rem;
+}
+
+.section-tak-title {
+    font-size: 4rem;     
+    font-weight: bold;
+    text-shadow: 0 4px 3px rgba(0, 0, 0, 0.4);
+}
+
+.section-tak-text {
+    position: relative;
+    font-size: 1.8rem;      
+    margin-bottom: 1rem;
+    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.4);
+}
+
+.section-tak h2::after {
+    content: "";
+    display: block;
+    width: 70%;
+    height: 4px;
+    background-color: #947676;
+    margin: 3rem auto 0 auto;
+    border-radius: 2px;
+}
+
+.section-tak-p {
+    font-size: 1.5rem;
     max-width: 55ch;     
     line-height: 1.6;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
@@ -767,4 +895,37 @@ body::-webkit-scrollbar { /* All other browsers */
 .scroll-btn:hover {
     background-color: #f8b600;
     transition: all 0.3s ease;
+}
+
+/* ___________________________________________ */
+
+               /* Animations */
+
+/* ___________________________________________ */
+
+.guac-zoom-in-n-out1.guac-visible {
+    animation: guacZoomInNOut 0.5s forwards;
+    animation-delay: 1s;
+}
+
+.guac-zoom-in-n-out2.guac-visible {
+    animation: guacZoomInNOut 0.5s forwards;
+    animation-delay: 1.5s; 
+}
+
+.guac-zoom-in-n-out3.guac-visible {
+    animation: guacZoomInNOut 0.5s forwards;
+    animation-delay: 2s; 
+}
+
+@keyframes guacZoomInNOut {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.05); 
+    }
+    100% {
+        transform: scale(1);   
+    }
 }
