--- a/Visuals/templates/payment.html
+++ b/Visuals/templates/payment.html
@@ -29,7 +29,7 @@
     <script type="module" src="../static/js/components/navbar.js" defer></script>
 
 </head>
-<body>
+<body class="subpage">
 
     <!-- Navbar -->
     <div id="navbar-component"></div>
