--- a/Visuals/templates/index.html
+++ b/Visuals/templates/index.html
@@ -30,6 +30,7 @@
     <!-- Modules -->
     <script type="module" src="../static/js/components/navbar.js" defer></script>
     <script type="module" src="../static/js/components/footer.js" defer></script>
+    <script type="module" src="../static/js/components/footer-nav.js" defer></script>
 
     <!--
             defer loads the script along with the page
@@ -180,15 +181,9 @@
     <div id="footer-component"></div>
     <!-- Footer -->
 
-    <!-- Footer Navbar Start -->
-    <section class="footer-navbar guac-d-flex guac-justify-center guac-align-center">
-        <p>
-            Built by Andreas, Ebou & Jonas with 
-            <span style="color:#ff0000;">&#10084;</span>
-        </p>
-    </section>
-    <!-- Footer Navbar End -->
-
+    <!-- Footer Nav -->
+    <div id="footer-nav-component"></div>
+    <!-- Footer Nav -->
 
 </body>
 </html>
