--- a/Visuals/static/css/style.css
+++ b/Visuals/static/css/style.css
@@ -46,6 +46,7 @@
     --profile-sidemenu-border: #727272;
     --profile-sidemenu-buttons: var(--profile-background);
     --profile-sidemenu-buttons-text: white;
+    --profile-button-hover: #331f1f; 
 
     /* Inputs */
     --input-box: #D9D9D9;
@@ -210,7 +211,6 @@ body::-webkit-scrollbar { /* All other browsers */
 .subpage .section-1 {
     position: relative;
     background-color: var(--section-1-background);
-    height: 50rem; /* Temp Until Content is Added */
 }
 
 .section-1-intro {
@@ -487,6 +487,11 @@ body::-webkit-scrollbar { /* All other browsers */
      z-index: 500;
 }
 
+.wave-1 img {
+    filter: drop-shadow(0px -5px 10px rgba(0,0,0,0.2));
+}
+
+
 /* ___________________________________________ */
 
                   /* Footer */
@@ -693,6 +698,30 @@ body::-webkit-scrollbar { /* All other browsers */
     background-color: var(--exit-button-background-hover);
     color: var(--exit-button-background-hover-text) !important;
     transform: scale(1.1);
+}
+
+.exit-btn-profile {
+    text-decoration: none !important;
+    position: absolute;
+    bottom: 3rem;
+    left: 50%;
+    transform: translateX(-50%);
+    transform-origin: center;
+    background-color: var(--profile-background);
+    border: 2px solid var(--profile-sidemenu-border);
+    color: var(--cupcake-white);
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.exit-btn-profile:hover {
+    background-color: var(--profile-button-hover);
+    color: var(--cupcake-white) !important;
+    transform: translateX(-50%) scale(1.1);
 }
 
 /* ___________________________________________ */
@@ -928,4 +957,195 @@ body::-webkit-scrollbar { /* All other browsers */
     100% {
         transform: scale(1);   
     }
+}
+
+/* ___________________________________________ */
+
+            /* Profile & Admin */
+
+/* ___________________________________________ */
+
+.profile-menu-visuals {
+    width: 100%;
+    height: 100vh;
+    display: flex; 
+    overflow: hidden;
+}
+
+.profile-menu-visuals a:hover {
+    text-decoration: none;
+}
+
+.profile-menu-visuals > .guac-row { /* Affects the child of the profile-menu-visuals only (guac-row) */
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    gap: 0; 
+}
+
+.profile-nav {
+    background-color: var(--profile-sidemenu);
+    color: white;
+    padding: 1rem;
+    display: flex;
+    border-right: 2px solid var(--profile-sidemenu-border);
+    flex-direction: column;
+    gap: 1rem;
+    flex: 0 0 16.6667%; 
+    max-width: 16.6667%;
+    position: relative;
+}
+
+.profile-actual {
+    overflow-y: auto;
+    color: #FFF;
+    background-color: var(--profile-background);
+    padding: 1rem;
+    overflow-y: auto;
+    flex: 1 1 0; 
+    max-width: none; 
+}
+
+.profile-title {
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+.profile-title h3 {
+    font-size: 1.5rem;
+    line-height: 1.2;
+}
+
+.profile-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem; /* Distance between each menu item */
+    align-items: center;
+}
+
+.guac-btn-profile {
+    background-color: var(--profile-sidemenu-buttons);
+    color: var(--profile-sidemenu-buttons-text);
+    border: 2px solid var(--profile-sidemenu-border);
+    border-radius: 15px !important;
+    width: 100%;
+    max-width: 70%;
+    text-align: center;
+}
+
+.guac-btn-profile:hover {
+    background-color: var(--profile-button-hover) !important;
+    transform: translateY(5%);
+    transition: all 0.2s ease-in-out;
+}
+
+/* ___________________________________________ */
+
+                /* Events */
+
+/* ___________________________________________ */
+
+.event-card {
+    background-color: #cea2a2 !important;
+    border-radius: 25px !important;
+    border: 4px dashed #e4e4e4 !important;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: relative;
+}
+
+
+.event-page .section-1 h2 {
+    color: #FFF;
+    text-align: center;       
+    position: relative;        
+    margin-bottom: 1.5rem;      
+}
+
+.event-page .section-1 h2::after {
+    content: "";
+    display: block;            
+    margin: 2rem auto 0; /* Centers our line */
+    width: 60px;               
+    height: 3px;              
+    background-color: #FFF;
+    border-radius: 1px;
+}
+
+.event-page .section-1 p {
+    text-align: center;
+    font-style: italic;
+    color: #FFF;
+    opacity: 0.7;
+    margin-top: 0.5rem;
+    margin-bottom: 4rem;
+    font-size: 1rem;
+}
+
+.event-card:hover {
+    transform: scale(105%) !important;
+    box-shadow: 0 12px 25px rgba(0,0,0,0.25);
+}
+
+.event-image-container {
+    position: relative;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+
+.event-image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.event-badge {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #8f6262;
+    border: 2px solid var(--profile-sidemenu-border);
+    color: #fff;
+    font-weight: bold;
+    padding: 0.25rem 0.75rem;
+    border-radius: 0.5rem;
+    font-size: 0.85rem;
+}
+
+.guac-btn-event {
+    background-color: var(--cupcake-orange);
+    border-radius: 15px !important;
+    border: 2px solid #FFF;
+}
+
+.guac-card a {
+    color: #e4e4e4;
+    font-weight: 600;
+}
+
+.guac-card a:hover {
+    text-decoration: none;
+}
+
+.event-card .guac-card-title {
+    color: #664b4b !important;
+    max-width: 80%;
+}
+
+.event-card .guac-card-text {
+    color: #664b4b !important;
+    max-width: 80%;
+}
+
+.event-card .guac-card-title,
+.event-card .guac-card-text {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    max-width: 80%;
 }
