--- a/Visuals/templates/events.html
+++ b/Visuals/templates/events.html
@@ -27,9 +27,11 @@
 
     <!-- Modules -->
     <script type="module" src="../static/js/components/navbar.js" defer></script>
+    <script type="module" src="../static/js/components/footer.js" defer></script>
+    <script type="module" src="../static/js/components/footer-nav.js" defer></script>
 
 </head>
-<body class="subpage">
+<body class="subpage event-page">
 
     <!-- Navbar -->
     <div id="navbar-component"></div>
@@ -60,15 +62,76 @@
     </section>
     <!-- Hero Section End -->
 
-    <!-- Next Section Start -->
+    <!-- Event Section Start -->
     <section class="section-1">
         <div class="guac-container">
             <div class="guac-row">
 
+                <!-- Event Card Start -->
+                <div class="guac-col-12 guac-mt-5">
+                    <h2>Upcoming Events</h2>
+                    <p>Se alle vores kommende events og tilmeld dig i dag!</p>
+                    <div class="guac-grid-3 guac-gap-4">
+
+                        <div class="guac-card event-card">
+                            <div class="event-image-container">
+                                <img src="../static/images/page-content/events/event-card-1.png" alt="Autumn Cupcake Fair">
+                                <div class="event-badge">12/10-2025</div>
+                            </div>
+                            <div class="guac-card-title">Cupcake Eating Contest</div>
+                            <div class="guac-card-text">
+                                Whos the fattest of the fattest? 90min. Eat as many as u can, fatty.
+                            </div>
+                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Join Now</a>
+                        </div>
+
+                        <div class="guac-card event-card">
+                            <div class="event-image-container">
+                                <img src="../static/images/page-content/events/event-card-1.png" alt="Autumn Cupcake Fair">
+                                <div class="event-badge">20/10-2025</div>
+                            </div>
+                            <div class="guac-card-title">Chocolate Dipping</div>
+                            <div class="guac-card-text">
+                                Dip your balls in chocolate and make a mold for a loved one!
+                            </div>
+                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Reserve Spot</a>
+                        </div>
+
+                        <div class="guac-card event-card">
+                            <div class="event-image-container">
+                                <img src="../static/images/page-content/events/event-card-1.png" alt="Autumn Cupcake Fair">
+                                <div class="event-badge">31/10-2025</div>
+                            </div>
+                            <div class="guac-card-title">#BLM Meeting</div>
+                            <div class="guac-card-text">
+                                let's get it! yesssirrrrski. Whatever. This is a text.
+                            </div>
+                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Learn More</a>
+                        </div>
+
+                    </div>
+                </div>
+                <!-- Event Card End -->
+
             </div>
         </div>
+
+        <!-- End Wave Section 2 Start -->
+        <div class="wave-3">
+            <img src="../static/images/waves/footer-wave.svg">
+        </div>
+        <!-- End Wave Section 2 End -->
+
     </section>
-    <!-- Next Section End -->
+    <!-- Event Section End -->
+
+    <!-- Footer -->
+    <div id="footer-component"></div>
+    <!-- Footer -->
+
+    <!-- Footer Nav -->
+    <div id="footer-nav-component"></div>
+    <!-- Footer Nav -->
 
 </body>
 </html>
